# rapidjson-rs

./: Cargo.toml  build.rs
src/: dfs.rs  gen-json.py  lazy_json.rs  lib.cpp  lib.rs
