[package]
name = "rapidjson-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
cty = "0.2.2"
serde_json = "1.0.108"
serde = { version = "1.0.196" }
anyhow = "1.0.79"
cxx = "1.0"

[build-dependencies]
cc = "1.0.83"